legend-pure-parser/examples/errors/01_missing_brace.pure
###Pure

// ERROR: Missing closing brace on class body
Class model::errors::MissingBrace
{
  name: String[1];
  age: Integer[1];

